# academic-agent-team

./: .env.example  .gitignore  README.md  academic-agent-team-prd.md  demo.py  pyproject.toml
academic_agent_team/: __init__.py  pipeline.py  pipeline_real.py  pipeline_v2.py  session_logger.py
academic_agent_team/agents/: __init__.py  advisor.py  data_analyst.py  pipelined_team.py  polisher.py  researcher.py  researcher_rag.py  reviewer.py  writer.py
academic_agent_team/cli/: __init__.py  console.py
academic_agent_team/config/: journals.py  models.py  role_profiles.py
academic_agent_team/contracts/: __init__.py  agent_contracts.py
academic_agent_team/core/: __init__.py  agent_prompts.py  autogen_adapter.py  base_client.py
academic_agent_team/core/agents/: __init__.py  autogen_agents.py
academic_agent_team/core/clients/: __init__.py  anthropic_client.py  autogen_adapter.py  deepseek_client.py  minimax_client.py  mock_client.py  ollama_client.py  openai_client.py  zhipu_client.py
academic_agent_team/core/team/: __init__.py  graph_flow_team.py
academic_agent_team/plugins/: __init__.py  base.py
academic_agent_team/plugins/latex_export/: __init__.py  exporter.py  plugin.py
academic_agent_team/plugins/pdf_extract/: __init__.py  parser.py  plugin.py
academic_agent_team/plugins/rag/: __init__.py  plugin.py  query.py
academic_agent_team/skills/: registry.csv
academic_agent_team/skills/supplemental/: prompt_31_topic_advisor_v1.0.md  prompt_32_cn_reviewer_v1.0.md  prompt_33_cn_outline_v1.0.md  prompt_34_readability_v1.0.md
academic_agent_team/storage/: __init__.py  db.py  vector_db.py
academic_agent_team/tools/: __init__.py  ai_detection.py  citation_verifier.py  export_gate.py  literature.py  plagiarism_checker.py  search_cnki.py
academic_agent_team/tui/: __init__.py  app.py  events.py  interrupt.py  runner.py
academic_agent_team/tui/runners/: __init__.py
docs/ai/: ARCH.md  CHANGE_LOG.md  GATES.md  INVARIANTS.md  PHASE_0_UNDERSTANDING.md  PHASE_1_COLLABORATION.md  PHASE_4_AGENT_OS.md  PHASE_5_IMPLEMENTATION.md  PHASE_5_STABILITY.md  PRD.md  PRD_REVIEW_REPORT.md  PRODUCT_OVERVIEW.md  RELEASE_BASELINE_V1_1_RC.md  RELEASE_NOTES_v1.1.0.md  ROLLBACK.md  SESSION_NOTES.md  TASK_BOARD.md  V1_2_PLAN.md  VISION.md  state.yaml
tests/: test_agent_contracts.py  test_ai_detection.py  test_autogen_pipeline.py  test_citation_verifier.py  test_cli.py  test_cli_release_gate.py  test_cli_v2_engine.py  test_cost_tracking.py  test_db_schema_migration.py  test_e2e.py  test_model_registry.py  test_pipeline_v2_persistence.py  test_plagiarism_checker.py  test_readability_scorer.py  test_session_persistence.py
tools/: readability_scorer.py
(+3 files in other folders)
