[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "academic-agent-team"
version = "1.7.0"
description = "Multi-agent academic paper writing system — AutoGen 0.7 GraphFlow, 5-agent pipeline, PRD v1.7 aligned."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  # AutoGen 0.4+ — 多 Agent 协作框架
  "autogen-agentchat[0.4]>=0.4,<1.0",
  # 契约校验（替代 dict 列表比对）
  "pydantic>=2.0",
  # 模型客户端
  "openai>=1.0",
  "anthropic>=0.40",
  # 工具库
  "rich>=13.7",
  "textual>=0.61",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "tiktoken>=0.7",
  # 文档导出
  "python-docx>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.0",
]

[project.scripts]
paper-team = "academic_agent_team.cli.console:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
