[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "academic-agent-team"
version = "0.1.0"
description = "PRD-aligned MVP scaffold for a multi-agent academic writing system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "rich>=13.7",
  "textual>=0.61",
  "pydantic>=2.0",
  "openai>=1.0",
  "autogen-agentchat>=0.4",
  "anthropic>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
paper-team = "academic_agent_team.cli.console:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
