[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "academic-agent-team"
version = "0.2.0"
description = "PaperGenius Pro - AI-assisted academic paper writing system for C-journals and top conferences."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  # Core
  "rich>=13.7",
  "textual>=0.61",
  "pydantic>=2.0",
  # LLM Clients
  "openai>=1.0",
  "autogen-agentchat>=0.4",
  "anthropic>=0.20.0",
  # RAG & Vector DB (MVP v1.1)
  "chromadb>=0.4",
  "sentence-transformers>=2.2",
  # PDF Parsing
  "pymupdf4llm>=0.0.10",
  # Literature Search
  "httpx>=0.27",
  # Optional: paper-qa for advanced RAG
  # "paper-qa>=5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]
cnki = [
  "magiccnki>=0.1",  # CNKI 搜索
]
latex = [
  "jinja2>=3.1",  # LaTeX 模板引擎
]
all = [
  "academic-agent-team[dev,cnki,latex]",
]

[project.scripts]
paper-team = "academic_agent_team.cli.console:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
